--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,18 +5,6 @@
     android:orientation="vertical"
     android:background="@android:color/white">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="139dp"
-        android:foregroundGravity="center"
-        android:layout_gravity="top"
-        android:src="@drawable/login"
-        android:layout_marginTop="48dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,6 +25,15 @@
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginLeft="-100dp"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/clockImage"
+        android:src="@mipmap/clock"
+        android:layout_gravity="bottom"
+        android:layout_alignParentBottom="true" />
 
 
 </RelativeLayout>
