--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -5,25 +5,35 @@
     android:orientation="vertical"
     android:background="@android:color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#50d9ff"
-        android:gravity="bottom|center"
-        android:text="Welcome to Nurse Management system "
-        android:textSize="20sp"
-        android:textStyle="bold|normal"
-        android:id="@+id/textView"
-        android:layout_marginTop="72dp"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true" />
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_marginRight="-75dp"
+        android:rotation="-70"
+        android:layout_marginBottom="50dp"
+        android:id="@+id/clockRight"
+        android:src="@mipmap/clock6"
+        android:layout_gravity="top"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"/>
+
+    <ImageView
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:id="@+id/yousee_logo"
         android:src="@drawable/uclogo"
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="bottom|center"
+        android:text="Backed By"
+        android:textSize="12sp"
+        android:id="@+id/backed_by"
+        android:layout_marginTop="72dp"
+        android:layout_above="@+id/yousee_logo"
         android:layout_centerHorizontal="true" />
     <ImageView
         android:layout_width="250dp"
@@ -31,7 +41,8 @@
         android:layout_marginLeft="-100dp"
         android:layout_marginBottom="50dp"
         android:id="@+id/clockImage"
-        android:src="@mipmap/clock"
+        android:src="@mipmap/clock6"
+
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true" />
 
