--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,12 +13,16 @@
         <item name="windowNoTitle">false</item>
     </style>
 
-    <style name="MyTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="MyTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/white</item>
+        <item name="colorAccent">@color/Blue_A400</item>
+        <item name="color">@color/Blue_A400</item>
+        <item name="android:buttonStyle">@style/Widget.AppCompat.Button.white</item>
+
+
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
@@ -29,7 +33,7 @@
         <item name="android:background">@color/primary</item>
     </style>
     <style name="Widget.AppCompat.Button.white" parent="Widget.AppCompat.Button.Colored">
-        <item name="android:color">@color/black</item>
+        <item name="android:color">@color/white</item>
         <item name="colorAccent">@color/white</item>
         <item name="colorButtonNormal">@color/white</item>
     </style>
@@ -43,6 +47,12 @@
         <item name="android:height">32dp</item>
 
     </style>
+    <style name="Widget.AppCompat.EditText.Blueish" parent="Widget.AppCompat.EditText">
+        <item name="android:color">@color/Blue_A400</item>
+        <item name="colorAccent">@color/Blue_A400</item>
+
+    </style>
+
 
     <style name="AppCompat.ProgressDialog" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:indeterminateProgressStyle">@color/colorPrimary</item>
