--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -122,13 +122,11 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
                 android:background="#5c5eff"
                 android:orientation="horizontal"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-
                 android:id="@+id/leavesLayout">
 
                 <TextView
@@ -136,16 +134,18 @@
                     android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:text="Leaves "
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_gravity="start"
                     android:textColor="#FFFFFF"/>
 
                 <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="32dp"
+                    android:layout_height="wrap_content"
                     android:text="apply"
                     android:id="@+id/button3"
-                    android:background="@drawable/button"
                     android:layout_gravity="end"
+                    style="@style/Widget.AppCompat.Button.white"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true" />
             </RelativeLayout>
@@ -225,7 +225,6 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
                 android:background="#5e61ff"
                 android:orientation="horizontal"
                 android:weightSum="1"
@@ -235,6 +234,8 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="15dp"
                     android:textSize="20sp"
                     android:text="Shift Swapping"
                     android:textColor="#FFFFFF" />
@@ -242,10 +243,10 @@
 
                 <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="25dp"
+                    android:layout_height="wrap_content"
                     android:text="request"
                     android:id="@+id/button4"
-                    android:background="@drawable/button"
+                    style="@style/Widget.AppCompat.Button.white"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_weight="0.21" />
